--- a/options/train/LOLv1.yml
+++ b/options/train/LOLv1.yml
@@ -14,8 +14,8 @@ datasets:
     interval_list: [1]
     random_reverse: false
     border_mode: false
-    dataroot_GT: path_to_datasets/LOLv1/our485/high
-    dataroot_LQ: path_to_datasets/LOLv1/our485/low
+    dataroot_GT: /content/drive/MyDrive/miccaichallenge/lol_v1/lol_dataset/our485/high
+    dataroot_LQ: /content/drive/MyDrive/miccaichallenge/lol_v1/lol_dataset/our485/low
     train_size: [600, 400]
     cache_keys: ~
     cache_data: true
@@ -33,8 +33,8 @@ datasets:
   val:
     name: REDS4
     mode: video_samesize_lol
-    dataroot_GT: path_to_datasets/LOLv1/our485/high
-    dataroot_LQ: path_to_datasets/LOLv1/our485/low
+    dataroot_GT: /content/drive/MyDrive/miccai challenge/lol v1/lol_dataset/eval15/high
+    dataroot_LQ: /content/drive/MyDrive/miccai challenge/lol v1/lol_dataset/eval15/low
     cache_data: true
     N_frames: 5
     padding: new_info
