--- a/options/test/LOLv1.yml
+++ b/options/test/LOLv1.yml
@@ -34,4 +34,4 @@ network_G:
 #### path
 path:
   root: ./
-  pretrain_model_G: LOLv1.pth
+  pretrain_model_G: /content/experiments/LOLv1_model/models/latest_G.pth
