--- a/options/train/LOLv1.yml
+++ b/options/train/LOLv1.yml
@@ -33,8 +33,8 @@ datasets:
   val:
     name: REDS4
     mode: video_samesize_lol
-    dataroot_GT: /content/drive/MyDrive/miccai challenge/lol v1/lol_dataset/eval15/high
-    dataroot_LQ: /content/drive/MyDrive/miccai challenge/lol v1/lol_dataset/eval15/low
+    dataroot_GT: /content/drive/MyDrive/lol_dataset/eval15/high
+    dataroot_LQ: /content/drive/MyDrive/lol_dataset/eval15/low
     cache_data: true
     N_frames: 5
     padding: new_info
